# LangInterpreter

./: .gitignore  .prettierrc  Cargo.toml  README.md  classes.x  crates.md  lang.x  main.json  main.x  pessoa2.x  teste.sql
examples/: arrays.x  assign.x  bench.x  boolean.x  class.x  complexObject.x  compound.x  fibonacci.x  forLoop.x  if_else.x  input.x  instaceof.x  json.x  numberInput.x  object.x  range.x  trycatch.x  varargs.x  while.x
examples/Native/: Array.x  Number.x
examples/classes/: Date.x  Error.x  Number.x  inheritance.x  main.x  pessoa1.x
src/: lib.rs  main.rs
src/ast/: ast.rs
src/environment/: environment.rs  mod.rs  values.rs
src/environment/helpers/: class.rs
src/environment/native/: mod.rs  native_callable.rs
src/environment/native/macros/: mod.rs
src/environment/stdlib/: array.rs  class.rs  code_classes.rs  mod.rs  number.rs  string.rs
src/environment/stdlib/fs/: fs.rs  mod.rs
src/environment/stdlib/io/: io.rs  mod.rs
src/environment/stdlib/json/: json.rs  mod.rs
src/environment/stdlib/math/: math.rs  mod.rs
src/interpreter/: mod.rs
src/lexer/: tokens.rs
src/parsers/code/: parser.rs
stdlib/: Array.x  Error.x  Number.x  String.x
