[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.15.0"
ariadne = "0.5.1"
yansi = "1.0"
regex = { version = "1.11.1" }
anyhow = "1.0.98"
serde_json = "1.0.140"
dyn-clone = "1.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
